--- a/machine.ini
+++ b/machine.ini
@@ -11,8 +11,9 @@ offset = [400, 400, 200]
 zero = [0, 0, 500]
 # Maximum feed rate in mm/min
 fmax = 10000
-# Tool table
+# Tool table and number of tools
 tools = [10.0, 2.5, 3.0, 4.0, 7.5]
+tools_n = 5;
 # Real time scaling
 rt_pacing = 1
 
