Added support to rapid motion blocks + checked correct functionality with original file (no trc)

--- a/machine.ini
+++ b/machine.ini
@@ -13,7 +13,8 @@ zero = [0, 0, 500]
 fmax = 10000
 # Tool table and number of tools
 tools = [10.0, 2.5, 3.0, 4.0, 7.5]
-tools_n = 5;
+tools_n = 5
+
 # Real time scaling
 rt_pacing = 1
 
